# cyberflight

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml  build.rs
app/examples/: screenshot.rs
app/src/: flight.rs  main.rs  stream.rs
crates/cf-math/: Cargo.toml
crates/cf-math/examples/: aero_experiment.rs  aero_fine.rs  grid_search.rs
crates/cf-math/src/: aero.rs  bounce.rs  environment.rs  lib.rs  rk4.rs  rollout.rs  stats.rs  trajectory.rs  units.rs
crates/cf-render/: Cargo.toml
crates/cf-render/shaders/: composite.frag  composite.frag.spv  composite.vert  composite.vert.spv  grid.frag  grid.frag.spv  grid.vert  grid.vert.spv  rt.rchit  rt.rchit.spv  rt.rgen  rt.rgen.spv  rt.rmiss  rt.rmiss.spv
crates/cf-render/src/: context.rs  error.rs  framebuffer.rs  lib.rs  mode.rs  offscreen.rs  pipeline.rs  readback.rs  rt_offscreen.rs  rt_pipeline.rs  stream.rs  window.rs
crates/cf-render/src/render/: hud.rs  mod.rs  raster.rs  raytrace.rs
crates/cf-scene/: Cargo.toml
crates/cf-scene/src/: camera.rs  color.rs  grid.rs  hud.rs  hud_font.rs  lib.rs  range.rs  shot.rs  surface.rs  target.rs  tee.rs  trail.rs
crates/cf-test/: Cargo.toml
crates/cf-test/src/: compare.rs  golden.rs  lib.rs  property.rs
docs/: AERO.md  TRACKMAN_VALIDATION.md
