[workspace]
members = [
    "crates/cf-math",
    "crates/cf-scene",
    "crates/cf-render",
    "crates/cf-test",
    "app",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/divotmaker/cyberflight"

[workspace.dependencies]
glam = { version = "0.32", features = ["serde"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
ash = "0.38"
gpu-allocator = { version = "0.28", features = ["vulkan"] }
image-compare = "0.4"
proptest = "1"
approx = "0.5"
winit = "0.30"
ash-window = "0.13"
raw-window-handle = "0.6"
cf-math = { path = "crates/cf-math" }
cf-scene = { path = "crates/cf-scene" }
cf-render = { path = "crates/cf-render" }
cf-test = { path = "crates/cf-test" }
