[package]
name = "cyberflight"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cf-math.workspace = true
cf-scene.workspace = true
cf-render.workspace = true
anyhow.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
glam.workspace = true
image.workspace = true
