[package]
name = "cyberflight"
version = "0.0.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cf-math.workspace = true
cf-scene.workspace = true
cf-render.workspace = true
flighthook.workspace = true
anyhow.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
glam.workspace = true
image.workspace = true
tiny_http.workspace = true

[build-dependencies]
winresource = "0.1"
