[package]
name = "cf-scene"
version = "0.0.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cf-math.workspace = true
flightrelay.workspace = true
glam.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
